--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-text-mask": "^5.4.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-text-mask": "^5.4.7",
     "@types/uuid": "^8.3.0",
     "typescript": "^4.2.4"
   }
